--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Run tests
         run: |
           pytest \
-            --cov=json2schema2schema \
+            --cov=genschema \
             --cov-report=xml \
             --cov-report=html \
             --cov-report=term \
