--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel", "rich"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "json2schema2schema"
+name = "genschema"
 dynamic = ["version"]
 description = "A library for comparing JSON and schemas and generate new"
 authors = [
@@ -44,22 +44,22 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Miskler/json2schema2schema"
-Repository = "https://github.com/Miskler/json2schema2schema"
-Documentation = "https://miskler.github.io/json2schema2schema/basic/quick_start/index.html"
-Issues = "https://github.com/Miskler/json2schema2schema/issues"
+Homepage = "https://github.com/Miskler/genschema"
+Repository = "https://github.com/Miskler/genschema"
+Documentation = "https://miskler.github.io/genschema/basic/quick_start/index.html"
+Issues = "https://github.com/Miskler/genschema/issues"
 
 [project.scripts]
-json2schema = "json2schema2schema.cli:main"
+genschema = "genschema.cli:main"
 
 [tool.setuptools.dynamic]
-version = {attr = "json2schema2schema.__version__"}
+version = {attr = "genschema.__version__"}
 
 [tool.setuptools.packages.find]
-include = ["json2schema2schema*"]
+include = ["genschema*"]
 
 [tool.setuptools.package-data]
-"json2schema" = ["py.typed"]
+"genschema" = ["py.typed"]
 
 
 [tool.black]
@@ -93,4 +93,4 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "--cov=json2schema2schema --cov-report=term-missing --cov-report=html"
+addopts = "--cov=genschema --cov-report=term-missing --cov-report=html"
