--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -48,6 +48,12 @@ jobs:
             --cov-report=term \
             --junitxml=junit.xml
 
+      - name: Generate schema fingerprints
+        run: |
+          python -m tests.schema_fingerprint \
+            --dataset-dir tests/datasets \
+            --out-dir matrix-results
+
       - name: Upload raw reports
         if: always()
         uses: actions/upload-artifact@v4
@@ -57,6 +63,26 @@ jobs:
             htmlcov/
             junit.xml
             coverage.xml
+            matrix-results/
+
+  compare-matrix-results:
+    needs: tests
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: junit-*
+          path: _artifacts
+
+      - name: Compare schema digests across matrix
+        run: python tests/compare_schema_digests.py --artifacts-dir _artifacts
 
   reports:
     needs: tests
